Criação das classes Model

--- a/projeto-sistema-web/src/main/resources/application.properties
+++ b/projeto-sistema-web/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=projeto-sistema-web
+# Configuração do banco de dados
+spring.datasource.url=
+
+
+#Configuração de hibernate\JPA
+spring.jpa.hibernate.ddl-auto=upadate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
