pronto, primeira e segunda etapa finalizadas

--- a/projeto-sistema-web/src/main/resources/application.properties
+++ b/projeto-sistema-web/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=projeto-sistema-web
-# Configuração do banco de dados
-spring.datasource.url=
 
+# Configurações do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/sistemaweb
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Configuração de hibernate\JPA
-spring.jpa.hibernate.ddl-auto=upadate
+# Habilitar o Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Habilitar log de SQL para debug
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
